link to dashboard now works on all pages

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format:write": "prettier --write \"{components,pages,test}/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "next": "9.4.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
